# Skore

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
Editor/: CMakeLists.txt
Editor/Source/Fyrion/Editor/: Editor.cpp  EditorTypes.hpp  MenuItem.cpp  MenuItem.hpp
Editor/Source/Main/: Main.cpp  Skore.rc
Editor/Source/Skore/: AnimatorEditor.cpp  AnimatorEditor.hpp  Editor.cpp  Editor.hpp  EditorCommon.hpp  EditorLayout.cpp  EditorLayout.hpp  EditorPluginEntryPoint.hpp  EditorSettings.cpp  EditorSettings.hpp  EditorWorkspace.cpp  EditorWorkspace.hpp  Main.cpp  MaterialEditor.cpp  MaterialEditor.hpp  MenuItem.cpp  MenuItem.hpp  Selection.cpp  Selection.hpp
Editor/Source/Skore/Asset/: AssetEditor.cpp  AssetEditor.hpp  AssetFile.cpp  AssetFile.hpp  AssetFileOld.cpp  AssetFileOld.hpp  AssetTypes.cpp  AssetTypes.hpp
Editor/Source/Skore/Commands/: SceneCommands.cpp  SceneCommands.hpp  UndoRedoSystem.cpp  UndoRedoSystem.hpp
Editor/Source/Skore/Editor/: Editor.cpp  Editor.hpp  EditorTypes.hpp  MenuItem.cpp  MenuItem.hpp
Editor/Source/Skore/ImGui/: FieldRenderers.cpp  FieldVisibilityControls.cpp  GraphEditor.cpp  GraphEditor.hpp  Icons.h  IconsFontAwesome6.h  ImGui.cpp  ImGui.hpp  TypeActions.cpp
Editor/Source/Skore/MaterialGraph/: MaterialGraphCompiler.cpp  MaterialGraphCompiler.hpp  MaterialNode.cpp  MaterialNode.hpp
Editor/Source/Skore/Project/: ProjectManager.cpp  ProjectManager.hpp
Editor/Source/Skore/Resource/: RegisterResourceAssetTypes.cpp  ResourceAssetCommon.hpp  ResourceAssetTypes.cpp  ResourceAssetTypes.hpp  ResourceAssets.cpp  ResourceAssets.hpp
Editor/Source/Skore/Scene/: EntityTracker.cpp  EntityTracker.hpp  EntityTree.cpp  EntityTree.hpp  SceneEditor.cpp  SceneEditor.hpp  SceneViewPipelineModule.cpp  SceneViewRenderPipeline.cpp  SceneViewRenderPipeline.hpp  SceneViewRenderer.cpp  SceneViewRenderer.hpp
Editor/Source/Skore/Server/: EditorServer.cpp  EditorServer.hpp  EditorServerAssetApi.cpp
Editor/Source/Skore/Utils/: EntityPicker.cpp  EntityPicker.hpp  FreeViewCamera.cpp  FreeViewCamera.hpp  PreviewGenerator.cpp  PreviewGenerator.hpp  PreviewRenderPipeline.cpp  ProjectUtils.cpp  ProjectUtils.hpp  ShaderManager.cpp  ShaderManager.hpp  StaticContent.cpp  StaticContent.hpp  ThumbnailGenerator.cpp  ThumbnailGenerator.hpp
Editor/Source/Skore/Window/: AnimatorGraphWindow.cpp  AnimatorGraphWindow.hpp  AnimatorTreeViewWindow.cpp  AnimatorTreeViewWindow.hpp  ConsoleWindow.cpp  ConsoleWindow.hpp  DebuggerWindow.cpp  DebuggerWindow.hpp  EntityTreeWindow.cpp  EntityTreeWindow.hpp  GraphEditorWindow.cpp  GraphEditorWindow.hpp  HistoryWindow.cpp  HistoryWindow.hpp  MaterialGraphEditorWindow.cpp  MaterialGraphEditorWindow.hpp  PackagesWindow.cpp  PackagesWindow.hpp  PreviewWindow.cpp  PreviewWindow.hpp  ProjectBrowserWindow.cpp  ProjectBrowserWindow.hpp  PropertiesWindow.cpp  PropertiesWindow.hpp  ResourceDebuggerWindow.cpp  ResourceDebuggerWindow.hpp  SceneTreeWindow.cpp  SceneTreeWindow.hpp  SceneViewWindow.cpp  SceneViewWindow.hpp  SettingsWindow.cpp  SettingsWindow.hpp  TextureViewWindow.cpp  TextureViewWindow.hpp  WorldViewWindow.cpp  WorldViewWindow.hpp
Editor/Source/Skore/World/: WorldEditor.cpp  WorldEditor.hpp
Engine/: CMakeLists.txt
Engine/Source/Fyrion/: Common.hpp  Engine.cpp  Engine.hpp  PluginEntryPoint.hpp  TypeRegister.cpp
Engine/Source/Fyrion/Core/: Array.hpp  Attributes.hpp  CoreTypeRegister.cpp  HashMap.hpp  HashSet.hpp  Image.cpp  Image.hpp  Math.hpp  Optional.hpp  Registry.cpp  Registry.hpp  Serialization.cpp  Serialization.hpp  SettingsManager.cpp  SettingsManager.hpp  StringUtils.hpp
Engine/Source/Fyrion/Graphics/: Graphics.cpp  Graphics.hpp  GraphicsTypeRegister.cpp  GraphicsTypes.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderPipeline.hpp  RenderProxy.cpp  RenderProxy.hpp  RenderUtils.cpp  RenderUtils.hpp
Engine/Source/Fyrion/IO/: Asset.cpp  Asset.hpp  Compression.cpp  Compression.hpp  FileSystem.cpp  FileSystemWin32.cpp  RegisterIOTypes.cpp
Engine/Source/Fyrion/ImGui/: ImGui.cpp  ImGui.hpp
Engine/Source/Fyrion/Physics/: Physics.cpp  Physics.hpp  PhysicsProxy.cpp  PhysicsProxy.hpp  PhysicsTypes.cpp  PhysicsTypes.hpp
Engine/Source/Fyrion/Platform/: PlatformDesktop.cpp
Engine/Source/Fyrion/Scene/: GameObject.cpp  GameObject.hpp  Proxy.hpp  RegisterSceneTypes.cpp  Scene.cpp  Scene.hpp  SceneTypes.cpp  SceneTypes.hpp
Engine/Source/Skore/: Common.hpp  Engine.cpp  Engine.hpp  PluginEntryPoint.hpp  TypeRegister.cpp  TypeRegister.hpp
Engine/Source/Skore/Core/: Algorithm.hpp  Allocator.cpp  Allocator.hpp  ArgParser.hpp  Array.hpp  Attributes.hpp  Chronometer.hpp  Color.cpp  Color.hpp  CoreTypeRegister.cpp  Event.cpp  Event.hpp  FormatUtils.hpp  Graph.hpp  GraphTypes.hpp  Hash.hpp  HashBase.hpp  HashMap.hpp  HashSet.hpp  Image.cpp  Image.hpp  Logger.cpp  Logger.hpp  Math.hpp  Optional.hpp  Pair.hpp  Random.hpp  Registry.cpp  Registry.hpp  Serialization.cpp  Sinks.cpp  (+18 more)
Engine/Test/: EntryPoint.cpp
Engine/Test/Skore/: DocTest.hpp
Runtime/: CMakeLists.txt
Runtime/Source/Skore/: App.cpp  App.hpp  Common.hpp  Events.hpp  Main.hpp  OpenXRManager.cpp  OpenXRManager.hpp  PCH.hpp  PluginEntryPoint.hpp  Profiler.cpp  Profiler.hpp  RegisterTypes.cpp  RegisterTypes.hpp
Tests/: CMakeLists.txt
Tests/Files/: ShaderTest.hlsl
Tests/Files/Shaders/: AliasChainStep.comp  FillCompute.comp  FillPushConstant.comp  FillSolid.comp  HistoryAccumulate.comp  HistorySeed.comp  MaskSilhouette.raster  Triangle.raster  TriangleMRT.raster
Tests/Source/: EntryPoint.cpp
Tests/Source/Editor/: AssetTests.cpp  ImportedAssetTests.cpp  MaterialGraphTests.cpp
Tests/Source/GPU/: GpuTestEnvironment.cpp  GpuTestEnvironment.hpp  RenderGraphRenderTest.cpp  TriangleRenderTest.cpp
Tests/Source/Runtime/: AnimationTests.cpp  CoreTests.cpp  IOTests.cpp  LuaScriptTests.cpp  ReflectionTests.cpp  RenderGraphTests.cpp  ResourceTests.cpp  SceneTests.cpp  SerializationTests.cpp
Tools/SkoreMcp/: CMakeLists.txt  README.md  esbuild.config.mjs  mcptest.mjs  package-lock.json  package.json  smoke.mjs  tsconfig.json
Tools/SkoreMcp/src/: client.ts  index.ts
(+915 files in other folders)
